orbslam-windows/Thirdparty/g2o/g2o_androidV/ARM/Release/g2o_androidV.log
  ANDROID_HOME=C:\\Microsoft\AndroidSDK\25
  ANT_HOME=C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Apps\apache-ant-1.9.3
  JAVA_HOME=C:\Program Files\Android\jdk\microsoft_dist_openjdk_1.8.0.25
  NDK_ROOT=C:\\Microsoft\AndroidNDK64\android-ndk-r16b
  batch_stats.cpp
  cache.cpp
  In file included from ..\g2o\core\cache.cpp:27:
  In file included from ..\g2o\core/cache.h:32:
..\g2o\core/optimizable_graph.h(494,43): error : cannot use typeid with -fno-rtti
            _parameterTypes.resize(newSize, typeid(void*).name());
                                            ^
..\g2o\core/optimizable_graph.h(510,38): error : cannot use typeid with -fno-rtti
              _parameterTypes[argNo] = typeid(ParameterType).name();
                                       ^
  In file included from ..\g2o\core\cache.cpp:29:
  In file included from ..\g2o\core/factory.h:33:
..\g2o\core/creators.h(63,42): error : cannot use typeid with -fno-rtti
        HyperGraphElementCreator() : _name(typeid(T).name()) {}
                                           ^
..\g2o\core\cache.cpp(137,16): error : cannot use dynamic_cast with -fno-rtti
      Cache* c = dynamic_cast<Cache*>(e);
                 ^
  4 errors generated.
